# HybridModel

./: .gitignore  bioprocess-test.py  bioprocess.py  bioprocess_new.py  bioprocess_test.py  bioprocess_uncertainty.py  pyproject.toml
examples/: astaxanthin.py  chemical_reaction_example.py  pendulum.py  pendulum_v2.py  validation_example.py
examples/astaxanthin/: astaxanthin.py
examples/ecoli_ferm/: ecoli_ferm.py
examples/refolding/: refold_2.py  refold_3.py
hybrid_models/: __init__.py  basic_training.py  batch_processor.py  benchmark_optimizations.py  benchmark_performance.py  builder.py  data.py  data_utils.py  evaluation.py  evaluation_utils.py  experiment.py  loss.py  model_utils.py  ode_system.py  optimized_hybrid_training.py  optimized_nn.py  optimized_ode.py  optimized_training.py  parallel_processing.py  persistence.py  profiling.py  solver.py  training.py  uncertainty.py  utils.py  visualization.py
tests/: APICompatibilityTest.py  FormatSensitiveTest.py  TestParameterSyncExample.py  conftest.py  test_data.py  test_data_utils.py  test_evaluation.py  test_evaluation_enhanced.py  test_evaluation_utils.py  test_experiment.py  test_integration.py  test_loss.py  test_model_builder.py  test_model_utils.py  test_nn_module.py  test_ode_edge_cases.py  test_ode_system.py  test_persistance.py  test_solver.py  test_training.py  test_utils.py  tests_nn_advanced.py
