[tool.poetry]
name = "hybridmodel"
version = "0.1.0"
description = ""
authors = ["Florian Gisperg <florian.gisperg@tuwien.ac.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jax = "^0.5.3"
scipy = "^1.15.2"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
diffrax = "^0.7.0"
equinox = "^0.12.1"
optax = "^0.2.4"
openpyxl = "^3.1.5"
black = "^25.1.0"
notebook = "^7.3.3"
jupyterlab = "^4.3.6"
jaxtyping = "^0.3.0"
matplotlib = "3.9.0"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
